# zellij-toolbox

./: CLAUDE.md  Cargo.toml  README.md
.claude/: mcp.json  settings.json  settings.local.json
.claude/skills/: add-tool.md  build.md  check.md  github.md  preview.md  run.md  test.md
.claude/skills/add-tool/: SKILL.md
.claude/skills/check/: SKILL.md
.claude/skills/github/: SKILL.md
.claude/skills/issue/: SKILL.md
.claude/skills/preview/: SKILL.md
.claude/skills/run/: SKILL.md
.claude/skills/sync/: SKILL.md
.claude/skills/test/: SKILL.md
.devcontainer/: devcontainer.json
.github/issues/: 01-ci-cd-pipeline.md  02-color-theme-customization.md  03-plugin-event-integration.md  04-tool-version-caching.md  05-error-handling-diagnostics.md  06-config-hot-reload.md  07-shell-prompt-integration.md  08-test-environment-mcp.md
.github/workflows/: ci.yml
.serena/: config.yaml  project.yml
toolbox-cli/: Cargo.toml
toolbox-cli/src/: main.rs
toolbox-cli/tests/: cli_integration.rs
toolbox-core/: Cargo.toml
toolbox-core/src/: cache.rs  color.rs  config.rs  detector.rs  error.rs  info.rs  lib.rs
toolbox-zellij/: Cargo.toml
toolbox-zellij/src/: lib.rs  main.rs
