[package]
name = "toolbox-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tool for displaying development tool versions"

[[bin]]
name = "toolbox"
path = "src/main.rs"

[dependencies]
toolbox-core = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
