[package]
name = "toolbox-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tool for displaying development tool versions"

[[bin]]
name = "toolbox"
path = "src/main.rs"

[dependencies]
toolbox-core = { workspace = true, features = ["git", "sysinfo"] }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3"
