[package]
name = "toolbox-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for toolbox - tool version detection and system info"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
git2 = { workspace = true, optional = true }
sysinfo = { workspace = true, optional = true }

[features]
default = ["git", "sysinfo"]
git = ["dep:git2"]
sysinfo = ["dep:sysinfo"]
# For WASM builds (Zellij plugin), disable native features
wasm = []
