[package]
name = "toolbox-zellij"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Zellij plugin for displaying development tool versions"

[dependencies]
toolbox-core = { workspace = true, default-features = false, features = [
    "wasm",
] }
zellij-tile = "0.43.1"
serde = { workspace = true }
serde_json = { workspace = true }
unicode-width = "0.2"
